# pulp-nn-mixed

./: .gitignore  CMakeLists.txt  test_all.sh
XpulpNN-mixed/32bit/include/: pulp_nn_kernels.h  pulp_nn_utils.h
XpulpNN-mixed/64bit/include/: pulp_nn_kernels.h  pulp_nn_utils.h
XpulpNN/32bit/include/: pulp_nn_kernels.h  pulp_nn_utils.h
XpulpNN/64bit/include/: pulp_nn_kernels.h  pulp_nn_utils.h
XpulpV2/32bit/include/: pulp_nn_kernels.h  pulp_nn_utils.h
XpulpV2/64bit/include/: pulp_nn_kernels.h  pulp_nn_utils.h
generators/: pnn_kernels.py  pnn_utils.py  pulp_nn_examples_generator.py  pulp_nn_kernels_generator.py  pulp_nn_test_setup.py
generators/include/: pulp_nn_factory.py  pulp_nn_init.py  pulp_nn_struct.py
generators/templates/: data_allocation_x_y_z.t  make.t  pulp_nn_add_ql_x_y_z.t  pulp_nn_add_x_y.t  pulp_nn_api.t  pulp_nn_avgpool_new.t  pulp_nn_avgpool_x.t  pulp_nn_call.t  pulp_nn_conv_x_y_z.t  pulp_nn_dw_x_y_z.t  pulp_nn_include.t  pulp_nn_kernels.t  pulp_nn_linear_nq_x_y_z.t  pulp_nn_linear_q_x_y_z.t  pulp_nn_make.t  pulp_nn_matmul_x_y.t  pulp_nn_matmul_x_y_z.t  pulp_nn_maxpool_x.t  pulp_nn_pointwise_x_y_z.t  pulp_nn_utils_h.t  signature.t  test.t
generators/templates/XpulpNN/: xpulp_nn_conv1d_x_y_z.t  xpulp_nn_conv_x_y_z.t  xpulp_nn_dw_x_y_z.t  xpulp_nn_linear_nq_x_y_z.t  xpulp_nn_linear_q_x_y_z.t  xpulp_nn_matmul_x_y_z.t  (+1 more)
generators/templates/XpulpNN-mixed/: xpulp_nn_mix_conv_x_y_z.t  xpulp_nn_mix_dw_x_y_z.t  xpulp_nn_mix_linear_nq_x_y_z.t  xpulp_nn_mix_linear_q_x_y_z.t  xpulp_nn_mix_matmul_x_y_z.t  xpulp_nn_mix_pointwise_x_y_z.t
(+6917 files in other folders)
